<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <properties>
    <cytoscape.api.version>3.10.0</cytoscape.api.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
  </properties>

  <groupId>com.blant.edgepredict</groupId>
  <artifactId>BLANT</artifactId>
  <packaging>bundle</packaging>
  <version>1.231</version>
  <name>BLANT for Cytoscape</name>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.felix</groupId>
        <artifactId>maven-bundle-plugin</artifactId>
        <version>5.1.8</version>
        <extensions>true</extensions>
        <configuration>
          <instructions>
            <Bundle-SymbolicName>com.blant.edgepredict</Bundle-SymbolicName>
            <Bundle-Version>${project.version}</Bundle-Version>
            <Private-Package>com.blant.edgepredict.internal.*</Private-Package>
            <Bundle-Activator>com.blant.edgepredict.internal.CyActivator</Bundle-Activator>
            <Import-Package>*</Import-Package>
          </instructions>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <repositories>
    <repository>
      <id>cytoscape_releases</id>
      <url>https://nrnb-nexus.ucsd.edu/repository/cytoscape_releases/</url>
    </repository>
  </repositories>

  <dependencies>
    <dependency>
      <groupId>org.cytoscape</groupId>
      <artifactId>swing-application-api</artifactId>
      <version>${cytoscape.api.version}</version>
    </dependency>
    <dependency>
      <groupId>org.cytoscape</groupId>
      <artifactId>application-api</artifactId>
      <version>${cytoscape.api.version}</version>
    </dependency>
    <dependency>
      <groupId>org.cytoscape</groupId>
      <artifactId>model-api</artifactId>
      <version>${cytoscape.api.version}</version>
    </dependency>
    <dependency>
      <groupId>org.cytoscape</groupId>
      <artifactId>service-api</artifactId>
      <version>${cytoscape.api.version}</version>
    </dependency>
    <dependency>
      <groupId>org.cytoscape</groupId>
      <artifactId>work-api</artifactId>
      <version>${cytoscape.api.version}</version>
    </dependency>
    <dependency>
      <groupId>org.osgi</groupId>
      <artifactId>org.osgi.core</artifactId>
      <version>4.3.1</version>
    </dependency>
    <dependency>
        <groupId>org.cytoscape</groupId>
        <artifactId>io-api</artifactId>
        <version>${cytoscape.api.version}</version>
        <scope>provided</scope>
    </dependency>
    <dependency>
        <groupId>org.cytoscape</groupId>
        <artifactId>service-api</artifactId>
        <version>${cytoscape.api.version}</version>
        <scope>provided</scope>
    </dependency>
    <dependency>
    <groupId>org.cytoscape</groupId>
    <artifactId>layout-api</artifactId>
    <version>${cytoscape.api.version}</version>
    <scope>provided</scope>
</dependency>
  </dependencies>
</project>